--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <h1>{% block title %} Hi, my name is Sho Takeshita (竹下翔) {% endblock %}</h1>
+    <h1>Hi, my name is Sho Takeshita (竹下翔)</h1>
     <h2>
         About
     </h2>
