--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </p>
     <h2>Resume</h2>
     <p>
-        Here is my <a href="/static/pdf/sho_takeshita_resume.pdf">resume</a> as of 7/26/23
+        Here is my <a href="sho_takeshita_resume.pdf">resume</a> as of 7/26/23
     </p>
     <h2>
         Contact
